--- a/src/web/index.css
+++ b/src/web/index.css
@@ -63,7 +63,7 @@ body {
     background-color: #ffffff;
     color: rgb(20, 20, 20);
     border-radius: 10px;
-    box-shadow: 5px 5px 20px rgb(175, 175, 175);
+    /* box-shadow: 5px 5px 2px rgb(175, 175, 175); */
     transition: all ease 0.2s;
   }
   
@@ -77,6 +77,7 @@ body {
   
   /* Judul */
   header h1 {
+    color: #444444;
     text-align: center;
     font-size: 3.5rem;
     line-height: 130px;
@@ -91,17 +92,19 @@ body {
   }
   
   .image-report h5 {
-    text-align: left;
+    text-align: right;
+    margin-right: 8cm;
   }
   
   .drop-zone {
-    width: 100%;
+    width: 40%;
     height: 400px;
     padding: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
+    margin-left: 20cm;
     cursor: pointer;
     color: #9b9b9b;
     border: 3px dashed #afafaf;
@@ -142,7 +145,8 @@ body {
     border: none;
     width: 120px;
     height: 45px;
-    margin-top: 15px;
+    margin-top: 10px;
+    margin-left: 27.5cm;
     border-radius: 10px;
     transition: all 0.2s ease;
     outline: none;
@@ -285,3 +289,19 @@ body {
     }
   }
   
+
+
+
+
+.container {
+    /* background-color:#2E4272; */
+    display:flex;
+}
+.fixed {
+    /* background-color:#4F628E; */
+    width: 0;
+}
+.flex-item {
+    /* background-color:#7887AB; */
+    flex-grow: 1;
+}
