--- a/src/web/index.css
+++ b/src/web/index.css
@@ -5,8 +5,9 @@ body {
     background-image: url("background-network.jpg");
     background-repeat: no-repeat;
     background-position: 100px 20px;
-    background-size: contain;
+    background-size: 55%;
     text-align: center;
+    overflow-x: hidden;
   }
   
   /* Navigation Bar */
@@ -197,7 +198,7 @@ body {
     padding: 0px 5%;
     border-top: 2px solid rgba(167, 167, 167, 0.2);
     background-color: #292929;
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     padding: 0 20px 0 20px;
   }
@@ -276,4 +277,26 @@ body {
   color: white;
   margin: 10px 0 0 10px;
   padding: 10px;
+}
+
+#compression-result {
+  display: none;
+  margin-bottom: 50px;
+}
+
+#show-button {
+  margin-bottom: 20px;
+}
+
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
