--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,10 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="./assets/index.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='./assets/index.css') }}" />
 
     <!-- Fonts -->
-    <link rel="shortcut icon" href="./assets/weblogo.png" />
+    <link rel="shortcut icon" href="{{url_for('static', filename='./assets/weblogo.png') }}" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Proza+Libre:wght@500;600;700&display=swap" rel="stylesheet" />
@@ -34,26 +34,35 @@
       <div class = "main-text-side">
         Algeo20094
       </div>
+
       <div class = "form-side">
-        <form id="reportImage" enctype="multipart/form-data" method="POST">
-          <!--PERTAMA-->
+        <form id="reportImage" enctype="multipart/form-data" method="POST" action="/result">  
           <div class="drop-zone">
             <div class="drop-zone__prompt">Drop image here / click to upload</div>
-            <input type="file" name="imagereport" class="drop-zone__input" id="reportFile">
+            <input type="file" name="imagereport" class="drop-zone__input" id="reportFile" required>
           </div>
 
-          <!--KEDUA-->
+
           <div id = "compressionSlider">
-            <!-- <label for="compressionrate">Compression Rate :</label> -->
-            <input type="range" min="0" max="100" value="0" class="compressionrate" id="reportCompression">
-            <p>Compression Rate : <span id="rateShow"></span> %</p>
+            <!-- <input type="range" min="0" max="100" value="0" class="compressionrate" id="reportCompression" name = "rate"> -->
+            <!-- <p>Compression Rate : <span id="rateShow"></span> %</p> -->
           </div>
-
-
+          <input class="file_submit" type="Submit">
             <button type="submit" form="reportImage" data-bs-toggle="modal" data-bs-target="#submitted" id = "upload-button">Upload</button>
         </form>
       </div>
     </div>
+
+    <!-- COBA COBA LEE -->
+  <form method="post" action="/" enctype="multipart/form-data" >
+        <input type="file" name="file" class="form-control" autocomplete="off" required>
+        <input type="range" min="0" max="100" value="0" class="compressionrate"  name = "rate" id = "reportCompression">
+        <p>Compression Rate : <span id="rateShow"></span> %</p>
+      <p>
+          <input type="submit" value="Submit" class="btn btn-info">
+      </p>
+  </form>
+
 
     <div id="terimakasih" class="modal fade" tabindex="-1">
       <div class="modal-dialog">
@@ -79,24 +88,31 @@
     <br>
 
     <button id = "show-button">Toggle Show Result</button>
-
     <div id="compression-result">
-
       <div class="row">
         <div class="column">
           <h2>Original</h2>
         </div>
         <div class="column">
+          {% with messages = get_flashed_messages() %}
+          {% if messages %}
+            {% for message in messages %}
+              <h3>{{ message }}</h3>
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
           <h1><span id = "perc"></span></h1>
         </div>
       </div>
 
       <div class="row">
         <div class="column">
-          <img src="./assets/no-image.jpg" alt="Before" style="width:75%" id = "before-image">
+          <img src="{{url_for('static', filename='./assets/no-image.jpg') }}" alt="Before" style="width:75%" id = "before-image">
         </div>
         <div class="column">
-          <img src="./assets/no-image.jpg" alt="After" style="width:75%" id = "after-image">
+          {% if filename %}
+            <img src="{{ url_for('display_image', filename=filename) }}" style="width: 75%;" alt = "After" id = "after-image">
+          {% endif %}
         </div>
       </div>
 
@@ -105,8 +121,8 @@
       <button id = "download">Download Result</button>
     </div>
 
-    <script src="index.js"></script> <!-- BAGIAN JS BELOM-->
-    <script src="FileSaver.js"></script>
+    <script src="{{url_for('static', filename='index.js') }}"></script> <!-- BAGIAN JS BELOM-->
+    <script src="{{url_for('static', filename='FileSaver.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script>
       var slider = document.getElementById("reportCompression");
