Web integrate done, kurang design aja

--- a/src/static/assets/index.css
+++ b/src/static/assets/index.css
@@ -198,7 +198,7 @@ body {
     padding: 0px 5%;
     border-top: 2px solid rgba(167, 167, 167, 0.2);
     background-color: #292929;
-    /* position: absolute; */
+    position: fixed;
     bottom: 0;
     padding: 0 20px 0 20px;
   }
@@ -305,7 +305,7 @@ body {
 
 /* Main download button */
 #download-button{
-  display: none;
+  display: block;
   margin-bottom: 50px;
 }
 
