--- a/src/static/assets/index.css
+++ b/src/static/assets/index.css
@@ -2,9 +2,9 @@ body {
     padding: 0;
     margin: 0;
     font-family: "Proza Libre", sans-serif;
-    background-image: url("background-network.jpg");
+    /* background-image: url("background-network.jpg");
     background-repeat: no-repeat;
-    background-position: 100px 20px;
+    background-position: 100px 20px; */
     background-size: 55%;
     text-align: center;
     overflow-x: hidden;
@@ -22,8 +22,13 @@ body {
     /* background:linear-gradient(45deg, grey 50%, #292929 50%);  */
     background-color: #292929;
   }
+
+  .navbar-logo{
+    display: inline;
+    text-decoration: none;
+  }
   
-  nav ul {
+  /* nav ul {
     list-style-type: none;
     overflow: hidden;
     display: flex;
@@ -43,7 +48,7 @@ body {
     letter-spacing: 1px;
     border-radius: 10px;
     text-decoration: none;
-  }
+  } */
   
   .download {
     height: 40px;
@@ -60,13 +65,12 @@ body {
     border-radius: 10px;
   }
   
-  nav ul li a:hover {
+  /* nav ul li a:hover {
     background-color: #ffffff;
     color: rgb(20, 20, 20);
     border-radius: 10px;
-    /* box-shadow: 5px 5px 2px rgb(175, 175, 175); */
     transition: all ease 0.2s;
-  }
+  } */
   
   .download:hover {
     background-color: #444444;
@@ -246,11 +250,15 @@ body {
 
   /*Section Slider  + Upload Button */
 
-.main-text-side {
+/* .main-text-side {
   padding:30px;
-  float:left;
   width: 30%;
-  font-size: 3.5rem;
+} */
+
+#form-part {
+  margin: 0 5cm 2cm 5cm;
+  padding: 1cm 2cm 1cm 2cm;
+  border-style:groove;
 }
 
 .image-report form button {
@@ -281,13 +289,38 @@ body {
 
 /* section for before image and after image */
 #compression-result {
-  display: none;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition: all 1s ease-in-out;
+}
+
+#compression-result.show {
+  opacity: 1;
+  height: 15cm;
+  transition: all 1s ease-in-out;
   margin-bottom: 50px;
 }
 
 
 #show-button {
-  margin-bottom: 20px;
+  text-align: center;
+  color: #fff;
+  background: #4e4e4e;
+  border: none;
+  width: 200px;
+  height: 30px;
+  margin: 0 0 15px 0;
+  border-radius: 10px;
+  transition: all 0.2s ease;
+  outline: none;
+  font-size: 15px;
+}
+
+#show-button:hover{
+  background: #2e2e2e;
+  box-shadow: 5px 10px 30px rgba(32, 32, 32, 0.911);
+  transition: all ease 0.4s;
 }
 
 .column {
@@ -306,10 +339,25 @@ body {
 /* Main download button */
 #download-button{
   display: block;
-  margin-bottom: 50px;
+  margin-bottom: 3cm;
 }
 
 #download-button button{
-  color: black;
-  background-color: green;
+  text-align: center;
+  color: #fff;
+  background: green;
+  border: none;
+  width: 180px;
+  height: 65px;
+  margin: 0 0 15px 0;
+  border-radius: 10px;
+  transition: all 0.2s ease;
+  outline: none;
+  font-size: 17.5px;
+}
+
+#download-button button:hover{
+  background: rgba(24, 59, 18, 0.911);
+  box-shadow: 5px 10px 30px rgba(32, 32, 32, 0.911);
+  transition: all ease 0.4s;
 }
