--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,26 +13,95 @@
 
     <!-- Fonts -->
     <link rel="shortcut icon" href="{{url_for('static', filename='./assets/weblogo.png') }}" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Proza+Libre:wght@500;600;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500&display=swap" rel="stylesheet">
+
+    <!-- Card Animation -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <title>Image Compressor</title>
   </head>
 
   <body>
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="navbar-header">
-          <a class="navbar-logo" href="#">
-              <img src="/src/static/assets/background-network.jpg"/>
-              SVD <br/> Image Compressor
-          </a>
+    <div class="container">
+      <div class="logo">
+        <img src="{{url_for('static', filename='./assets/logoSARAP.png') }}" alt="logo" width="150"/>
       </div>
-    </nav>
+      <nav style="margin: 1.3cm;">
+        <button type="button" class = "button-about-us">About Us</button>
+      </nav>
+    </div>
+    <!-- Navigation Bar -->
+    <!-- <nav> -->
+      <!-- <div class="container">
+
+        <div class="navbar-header">
+          <button class="navbar-toggler" data-toggle="open-navbar1">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <a href="#">
+            <h4>Awesome<span>logo</span></h4>
+          </a>
+        </div>
+    
+        <div class="navbar-menu" id="open-navbar1">
+          <ul class="navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li class="navbar-dropdown">
+              <a href="#" class="dropdown-toggler" data-dropdown="my-dropdown-id">
+                Categories <i class="fa fa-angle-down"></i>
+              </a>
+              <ul class="dropdown" id="my-dropdown-id">
+                <li><a href="#">Actions</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="separator"></li>
+                <li><a href="#">Seprated link</a></li>
+                <li class="separator"></li>
+                <li><a href="#">One more seprated link.</a></li>
+              </ul>
+            </li>
+            <li class="navbar-dropdown">
+              <a href="#" class="dropdown-toggler" data-dropdown="blog">
+                Blog <i class="fa fa-angle-down"></i>
+              </a>
+              <ul class="dropdown" id="blog">
+                <li><a href="#">Some category</a></li>
+                <li><a href="#">Some another category</a></li>
+                <li class="separator"></li>
+                <li><a href="#">Seprated link</a></li>
+                <li class="separator"></li>
+                <li><a href="#">One more seprated link.</a></li>
+              </ul>
+            </li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Signin</a></li>
+          </ul>
+        </div>
+      </div> -->
+    <!-- </nav> -->
+
+
     <br><br>
-    <h2>Website ini dibuat untuk melatih kesabaran pengguna!</h2>
-    <h5>Oleh karena itu, jangan heran apabila waktu kompresi yang dibutuhkan cukup lama</h5>
+
+
+    <h1 style="font-size: 5rem; font-weight: 900; color: #1b4d89;">
+      SVD
+    </h1>
+    <h2 style="color: #1b4d89; font-size: 3rem; margin-left: 2cm;">
+      Image Compressor 
+      <span style="font-size: 1rem; color: #1b4d89; opacity: 0.75;">by S4RaP</span>
+    </h2>
+      <br>
+    <!-- <p style="width: 8cm; margin-left: 7.5cm; word-wrap: break-word; text-align: left; font-size: 12.5px;">
+      <i>Website yang dibuat untuk melatih kesabaran pengguna. Oleh karena itu, jangan heran apabila waktu kompresi yang dibutuhkan cukup lama </i>
+    </p> -->
+    <!-- <h3>Website ini dibuat untuk melatih kesabaran pengguna!</h3>
+    <h5>Oleh karena itu, jangan heran apabila waktu kompresi yang dibutuhkan cukup lama</h5> -->
     <!-- Upload Image Section -->
     <div class="image-report">
       <!-- <h5><strong>Upload Image</strong></h5>
@@ -67,8 +136,24 @@
       <br>
       <input type="range" min="0" max="100" value="0" class="compressionrate"  name = "rate" id = "reportCompression">
       <p>Compression Rate : <span id="rateShow"></span> %</p>
+
+      <!-- DESIGN SLIDER -->
+      <!-- <div class="container">
+  
+        <div class="range-slider">
+          <span id="rs-bullet" class="rs-label">0</span>
+          <input id="rs-range-line" class="rs-range" type="range" value="0" min="0" max="200">
+          
+        </div>
+        
+        <div class="box-minmax">
+          <span>0</span><span>200</span>
+        </div>
+        
+      </div> -->
+
     <p>
-        <input type="submit" value="Submit" class="btn btn-info">
+        <input type="submit" value="Submit" class="btn btn-info" id = "submit-button">
     </p>
     </form>
   </div>
@@ -141,9 +226,18 @@
         <button id = "download">Download Result</button>
       </div>
 
-    <script src="{{url_for('static', filename='index.js') }}"></script> <!-- BAGIAN JS BELOM-->
+      <div id = "about-us" class="about-us">
+        <div class = "card top" data-aos="fade-right"></div> <br>
+        <div class = "card mid" data-aos="fade-left"></div> <br>
+        <div class = "card top" data-aos="fade-right"></div> <br>
+      </div>
+
+
+    <!-- JS SCRIPT -->
+    <script src="{{url_for('static', filename='index.js') }}"></script>
     <script src="{{url_for('static', filename='FileSaver.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script>AOS.init();</script>
     <script>
       var slider = document.getElementById("reportCompression");
       var output = document.getElementById("rateShow");
@@ -152,6 +246,12 @@
       slider.oninput = function() {
         output.innerHTML = this.value;
         }
+      
+      $(".button-about-us").click(function() {
+      $('html,body').animate({
+        scrollTop: $(".about-us").offset().top},
+        'slow');
+        });
   </script>
   </body>
 
