--- a/src/static/assets/index.css
+++ b/src/static/assets/index.css
@@ -6,7 +6,7 @@ body {
     /* background-image: url("background-network.jpg");
     background-repeat: no-repeat;
     background-position: 100px 20px; */
-    background : url("3.svg") no-repeat;
+    background : url("3ver4.svg") no-repeat;
     background-size: cover;
     text-align: center;
     overflow-x: hidden;
@@ -16,17 +16,6 @@ body {
     font-size: 4rem;
     font-weight: 800;
   }
-  /* Navigation Bar */
-  /* nav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 5px 30px;
-    z-index: 1;
-    width: 100%;
-    top: 0;
-    background-color: #bae2e0;
-  } */
 
   .container{
     clear:both;
@@ -54,48 +43,22 @@ body {
     font-size: 3rem;
     font-weight: 900;
   }
-
-  .button-about-us {
-    text-align: center;
-    background: #1b4d89;
+  
+  #button-about-us{
+    text-decoration: none;
+    font-size: 1.2rem;
     color: white;
-    border: none;
-    width: 150px;
-    height: 45px;
-    margin: 7.5px 0 15px 0;
+    background-color: #1b4d89;
+    padding: 10px 20px 10px 20px;
     border-radius: 50px;
     transition: all 0.2s ease;
-    outline: none;
-    font-size: 1.2rem;
   }
 
-  .button-about-us:hover{
+  #button-about-us:hover{
     background-color: white;
     color: #1b4d89;
     transition: all ease 0.4s;
   }
-  
-  /* nav ul {
-    list-style-type: none;
-    overflow: hidden;
-    display: flex;
-    margin: 5px;
-    padding: 0px;
-  }
-  
-  nav ul li a {
-    height: 40px;
-    line-height: 43px;
-    margin: 10px;
-    padding: 0px 22px;
-    display: flex;
-    font-size: 1.1rem;
-    font-weight: 400;
-    color: #c4c4cf;
-    letter-spacing: 1px;
-    border-radius: 10px;
-    text-decoration: none;
-  } */
   
   .download {
     height: 40px;
@@ -111,13 +74,7 @@ body {
     background-color: #818181;
     border-radius: 10px;
   }
-  
-  /* nav ul li a:hover {
-    background-color: #ffffff;
-    color: rgb(20, 20, 20);
-    border-radius: 10px;
-    transition: all ease 0.2s;
-  } */
+
   
   .download:hover {
     background-color: #444444;
@@ -202,20 +159,6 @@ body {
     border: 0;
   }
   
-  /* Modal
-  .modal-container {
-    background: #f8faff;
-    border: 3px solid #646464;
-    box-sizing: border-box;
-    border-radius: 15px;
-    padding: 5rem 1rem 5rem 1rem;
-  }
-  
-  .modal-container p {
-    font-weight: 600;
-    font-size: 1.5rem;
-    text-align: center;
-  } */
   
   .button-scan {
     text-align: center;
@@ -249,7 +192,7 @@ body {
     padding: 0px 5%;
     border-top: 2px solid rgba(167, 167, 167, 0.2);
     background-color: #292929;
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     padding: 0 20px 0 20px;
   }
@@ -388,8 +331,14 @@ body {
   padding: 5px;
 }
 
+.column-image {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
 /* Clear floats after image containers */
-.row::after {
+.row-image::after {
   content: "";
   clear: both;
   display: table;
@@ -432,14 +381,33 @@ body {
 }
 
 .top {
+  text-align: left;
   margin-left: 2.5cm;
+  width: 30cm;
 }
 
 .mid {
+  text-align: right;
   margin-left: 7.5cm;
+  margin-right: 2cm;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 
+/* Create two equal columns that floats next to each other */
+.column-ab {
+  background-color: transparent;
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 500px;
+} 
 
-
-/* slider design */
+.row-ab:after {
+  content: "";
+  display: table;
+  clear: both;
+}
