--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -173,8 +173,10 @@
             <img src="{{url_for('static', filename='./assets/rania.jpg') }}" alt="no" width="400">
           </div>
           <div class="column-ab">
-            <h1 style="font-size: 3rem;">Epi</h1>
-            <p>Some text..</p>
+            <h1 style="font-size: 3rem;">Rania Dwi Fadhilah</h1>
+            <p>NIM : 13520142</p>
+            <p>Kelas : 03</p>
+            <p>"Webnya bagus sekali! sangat recommended untuk mengkompres gambar!"</p>
           </div>
         </div>
       </div>
