--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -103,6 +103,7 @@
 
     {% if text %}
       <h2>{{ text }} </h2>
+      <h3>Pixel difference percentage : <span style="font-weight: bold;">{{ percent }}%</span></h3>
     {% endif %}
 
     {% if filename %}
@@ -159,7 +160,9 @@
         <div class="row-ab mid" data-aos="fade-left">
           <div class="column-ab">
             <h1 style="font-size: 3rem;">Patrick Amadeus</h1>
-            <p>Some text..</p>
+            <h3>NIM : 13520109</h3>
+            <p>Kelas : 02</p>
+            <p>"Lawan kata dari cepat adalah website ini"</p>
           </div>
           <div class="column-ab">
             <img src="{{url_for('static', filename='./assets/patrick.jpg') }}" alt="no" width="350">
@@ -174,7 +177,7 @@
           </div>
           <div class="column-ab">
             <h1 style="font-size: 3rem;">Rania Dwi Fadhilah</h1>
-            <p>NIM : 13520142</p>
+            <h3>NIM : 13520142</h3>
             <p>Kelas : 03</p>
             <p>"Webnya bagus sekali! sangat recommended untuk mengkompres gambar!"</p>
           </div>
