--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -151,7 +151,9 @@
           </div>
           <div class="column-ab">
             <h1 style="font-size: 3rem;">Saul Sayers</h1>
-            <p>Some text..</p>
+            <h3>NIM : 13520094</h3>
+            <p>Kelas : 02</p>
+            <p>"Sebelum mengompres gambar, siap siap untuk mengompres kesabaranmu"</p>
           </div>
         </div> 
 
