update rumus sesuai faq

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -103,7 +103,7 @@
 
     {% if text %}
       <h2>{{ text }} </h2>
-      <h3>Pixel difference percentage : <span style="font-weight: bold;">{{ percent }}%</span></h3>
+      <h3>Compression percentage : <span style="font-weight: bold;">{{ percent }}%</span></h3>
     {% endif %}
 
     {% if filename %}
