Change accepted file types

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -74,7 +74,7 @@
     <!-- COBA COBA LEE -->
   <div id = "form-part">
     <form method="post" action="/" enctype="multipart/form-data" id = "main-form" onsubmit= "resultShow()">
-      <input type="file" name="file" class="form-control" autocomplete="off" id = "file" accept = ".png, .jpg, .jpeg, .svg"required >
+      <input type="file" name="file" class="form-control" autocomplete="off" id = "file" accept = ".png, .jpg, .jpeg" required >
       <br>
       <input type="range" min="0" max="100" value="0" class="compressionrate"  name = "rate" id = "reportCompression">
       <p>Compression Rate : <span id="rateShow"></span> %</p>
