--- a/src/static/assets/index.css
+++ b/src/static/assets/index.css
@@ -287,7 +287,7 @@ body {
 
 #compression-result.show {
   opacity: 1;
-  height: 15cm;
+  height: auto;
   transition: all 0.75s ease-in-out;
   margin-bottom: 50px;
 }
