--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -56,19 +56,21 @@
     <br><br>
 
 
-    <h1 style="font-size: 5rem; font-weight: 900; color: #1b4d89;">
+    <h1 
+        style="font-size: 5rem; font-weight: 900; color: #f9e45b;text-shadow: -1px 5px 0 #1b4d89,
+        1px 1px 0 #1b4d89,
+      1px -1px 0 #1b4d89,
+      -1px -1px 0 #1b4d89; ">
       SVD
     </h1>
-    <h2 style="color: #1b4d89; font-size: 3rem; margin-left: 2cm;">
+    <h2 style="color: #f9e45b; font-size: 3rem; margin-left: 2cm;text-shadow: -1px 5px 0 #1b4d89,
+    1px 1px 0 #1b4d89,
+   1px -1px 0 #1b4d89,
+  -1px -1px 0 #1b4d89;">
       Image Compressor 
-      <span style="font-size: 1rem; color: #1b4d89; opacity: 0.75;">by S4RaP</span>
+      <span style="font-size: 1rem; color: #1b4d89; opacity: 0.75; text-shadow: none;">by S4RaP</span>
     </h2>
       <br>
-    <!-- <p style="width: 8cm; margin-left: 7.5cm; word-wrap: break-word; text-align: left; font-size: 12.5px;">
-      <i>Website yang dibuat untuk melatih kesabaran pengguna. Oleh karena itu, jangan heran apabila waktu kompresi yang dibutuhkan cukup lama </i>
-    </p> -->
-    <!-- <h3>Website ini dibuat untuk melatih kesabaran pengguna!</h3>
-    <h5>Oleh karena itu, jangan heran apabila waktu kompresi yang dibutuhkan cukup lama</h5> -->
 
 
     <!-- COBA COBA LEE -->
@@ -143,11 +145,11 @@
     {% endif %}
 
       <div id = "about-us" class="about-us">
-        <h1 style="margin: 5cm 0 3cm 0; font-weight: lighter;color: #1b4d89;">About Us</h1>
+        <h1 style="margin: 5cm 0 3cm 0; font-weight: lighter;color: #1b4d89; ">About Us</h1>
 
         <div class="row-ab top" data-aos="fade-right">
           <div class="column-ab">
-            <img src="{{url_for('static', filename='./assets/saul.jpg') }}" alt="no" width="350">
+            <img src="{{url_for('static', filename='./assets/saul.jpg') }}" class = "profile-left" alt="no" width="350">
           </div>
           <div class="column-ab">
             <h1 style="font-size: 3rem;">Saul Sayers</h1>
@@ -167,7 +169,7 @@
             <p>"Lawan kata dari cepat adalah website ini"</p>
           </div>
           <div class="column-ab">
-            <img src="{{url_for('static', filename='./assets/patrick.jpg') }}" alt="no" width="350">
+            <img src="{{url_for('static', filename='./assets/patrick.jpg') }}" class = "profile-right" alt="no" width="350">
           </div>
         </div>
 
@@ -175,7 +177,7 @@
 
         <div class="row-ab top" data-aos="fade-right">
           <div class="column-ab">
-            <img src="{{url_for('static', filename='./assets/rania.jpg') }}" alt="no" width="400">
+            <img src="{{url_for('static', filename='./assets/rania.jpg') }}" class = "profile-left" alt="no" width="400">
           </div>
           <div class="column-ab">
             <h1 style="font-size: 3rem;">Rania Dwi Fadhilah</h1>
